--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-table, td {
-  border: 1px solid var(--background-modifier-border);
-}
-
 td {
   padding: 4px 8px;
 }
@@ -64,6 +60,7 @@ hr.divider {
   text-decoration: none;
   color: #818181;
   display: block;
+  font-style: italic;
 }
 
 .feedTableDiv table,tr,td {
@@ -71,6 +68,7 @@ hr.divider {
   border-spacing: 0;
   padding-right: 3px;
   padding-left: 0;
+  border-collapse: collapse;
 }
 
 .manageFeedsForm table {
@@ -83,9 +81,10 @@ hr.divider {
 
 .itemActions td {
   border: none;
-  border-spacing: 5px;
-  padding-right: 10px;
-  padding-left: 10px;
+  border-spacing: 0px;
+  padding-right: 15px;
+  padding-left: 0px;
+  font-style: italic;
 }
 
 .feedFolder {
@@ -106,6 +105,10 @@ hr.divider {
 
 .refreshFeed:hover {
   color: #f15500;
+}
+
+.itemTitle {
+  font-weight: bold;
 }
 
 .toggleRead {
