able to select text

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+.itemContent, .itemTitle {
+    -moz-user-select: text;
+    -webkit-user-select: text;
+    -ms-user-select: text;
+    user-select: text;
+}
+
 td {
   padding: 4px 8px;
 }
