--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,11 @@ td {
 }
 
 .navigation {
-  height: 92%; /* Full-height: remove this if you want "auto" height */
-  width: 160px; /* Set the width of the sidebar */
-  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-  z-index: 1; /* Stay on top */
-  top: 4.6em; /* Stay at the top */
+  height: 92%;
+  width: 160px;
+  position: fixed;
+  z-index: 1;
+  top: 4.6em;
   left: 0;
   text-align: left;
   padding-left: 1mm;
@@ -24,7 +24,7 @@ td {
 }
 
 .content {
-  margin-left: 160px; /* Same as the width of the sidebar */
+  margin-left: 160px;
   padding: 0px 1% 3em 0px;
   overflow-y: auto;
 }
@@ -40,14 +40,37 @@ hr.divider {
   border-width: 2px;
 }
 
-.navigation span:hover {
+.navigation .showFeed:hover {
   color: #f15500;
 }
 
-.showFeed span {
+.naviBarShown {
+  display: block;
+}
+
+.naviBarHidden {
+  display: none;
+}
+
+.contentBoxRightpage {
+  margin-left: 160px;
+}
+
+.contentBoxFullpage {
+  margin-left: 0px;
+}
+
+td.showFeed {
   text-decoration: none;
   display: block;
   padding-left: 2mm;
+}
+
+.showingFeed {
+  color: #f15500;
+}
+
+.nonShowingFeed {
 }
 
 .toggleNaviContainer {
@@ -57,6 +80,14 @@ hr.divider {
   z-index: 2;
   font-size: large;
   font-weight: bold;
+}
+
+.toggleNaviContainerExpanded {
+  background-color: #bc90a1;
+  opacity: 0.7
+}
+
+.toggleNaviContainerFolded {
 }
 
 .toggleNavi {
@@ -76,14 +107,14 @@ hr.divider {
   color: #f15500;
 }
 
-.navigation .manage {
+.manage {
   text-decoration: none;
   color: #818181;
   display: block;
   font-style: italic;
 }
 
-.feedTableDiv table,tr,td {
+.feedTableDiv :is(table,tr,td) {
   border: none;
   border-spacing: 0;
   padding-right: 3px;
@@ -91,16 +122,12 @@ hr.divider {
   border-collapse: collapse;
 }
 
-.feedTableDiv td {
-  border: none;
-}
-
-.manageFeedsForm table {
-  border-bottom: 1px solid #ddd;
-}
-
-.manageFeedsForm th,td {
-  border-bottom: 1px solid #ddd;
+table.manageFeedsForm, table.manageFeedsForm :is(tbody, tr, th, td) {
+  text-align: left;
+  font-size: xx-small;
+  border: 3px solid #bbaaaa;
+  border-collapse: collapse;
+  padding: 0px 0px;
 }
 
 .itemActions td {
@@ -116,7 +143,7 @@ hr.divider {
   font-size: large;
 }
 
-.navigation .feedFolder:hover {
+.feedFolder:hover {
   color: #7f7f7f;
 }
 
@@ -199,8 +226,21 @@ input[type=text] {
   width: 90%;
 }
 
-.cellInput input {
+.cellNameContainer {
+  width: 42%;
+}
+
+.cellNameContainer input {
   display: block;
+  width: 100%;
+}
+
+.cellFolderContainer {
+  width: 15%;
+}
+
+.cellFolderContainer input {
+  width: 100%;
 }
 
 .next_prev {
