--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,17 @@
     user-select: text;
 }
 
+.itemContent p {
+    padding: 0 0;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.itemContent span {
+    padding-left: 0;
+    padding-right: 1em;
+}
+
 .hidedItem {
   display: none;
 }
@@ -86,7 +97,7 @@ td.showFeed {
 }
 
 .toggleNavi {
-  padding-right: 2mm;
+  padding-right: 1em;
 }
 
 .toggleNavi:hover {
@@ -135,7 +146,7 @@ table.manageFeedsForm, table.manageFeedsForm :is(tbody, tr, th, td) {
 
 .itemActions td {
   border: none;
-  padding: 0 0.5em 0 0;
+  padding: 0 2mm 0 0;
   width: auto !important;
 }
 
@@ -156,6 +167,10 @@ table.manageFeedsForm, table.manageFeedsForm :is(tbody, tr, th, td) {
   text-decoration: none;
 }
 
+.oneFeedItem hr {
+  margin: 1em 0;
+}
+
 .refreshFeed:hover {
   color: #f15500;
 }
@@ -169,7 +184,7 @@ table.manageFeedsForm, table.manageFeedsForm :is(tbody, tr, th, td) {
 }
 
 .toggleRead, .noteThis, .saveSnippet, .toggleDelete {
-  font-size: normal;
+  font-size: small;
   font-style: italic;
   border: 1px solid;
   border-radius: 6px;
@@ -180,15 +195,24 @@ table.manageFeedsForm, table.manageFeedsForm :is(tbody, tr, th, td) {
   color: #f15500;
 }
 
+.itemContent, .itemTitle {
+  margin-top: 1em;
+  margin-bottom: 0;
+}
+
 .showItemContent {
-  font-size: large;
+  display: block;
   width: 100%;
-  height: 2em;
-  border: 1px solid black;
 }
 
 .showItemContent:hover {
-  color: #f15500;
+  cursor: default;
+  opacity: 0.8;
+}
+
+.divAsSep {
+  width: 100%;
+  height: 1mm;
 }
 
 .itemCreator {
@@ -248,6 +272,7 @@ input.addFeedInput, input.searchTerms {
 .next_prev {
   font-weight: bold;
   padding-right: 5px;
+  margin-top: 1em;
 }
 
 .next_prev:hover {
