--- a/styles.css
+++ b/styles.css
@@ -150,6 +150,22 @@ table.manageFeedsForm, table.manageFeedsForm :is(tbody, tr, th, td) {
   width: auto !important;
 }
 
+.elEmbedButton {
+  cursor: default;
+  font-weight: bold;
+  color: var(--link-color);
+}
+
+.elEmbedButton:hover {
+  opacity: 80%
+}
+
+.embeddedIframe {
+  width: 100%;
+  max-height: 800px;
+  min-height: 500px;
+}
+
 .feedFolder {
   font-weight: bold;
   font-size: large;
