--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-.itemContent, .itemTitle {
+.itemContent, .itemTitle, .embeddedIframe {
     -moz-user-select: text;
     -webkit-user-select: text;
     -ms-user-select: text;
