--- a/styles.css
+++ b/styles.css
@@ -146,7 +146,7 @@ table.manageFeedsForm, table.manageFeedsForm :is(tbody, tr, th, td) {
 
 .itemActions td {
   border: none;
-  padding: 0 2mm 0 0;
+  padding: 0 0.5mm 0 0;
   width: auto !important;
 }
 
@@ -160,10 +160,13 @@ table.manageFeedsForm, table.manageFeedsForm :is(tbody, tr, th, td) {
   opacity: 80%
 }
 
+.embeddedContainer {
+  width: 100%;
+}
+
 .embeddedIframe {
   width: 100%;
-  max-height: 800px;
-  min-height: 500px;
+  height: 60vh;
 }
 
 .feedFolder {
@@ -207,20 +210,20 @@ table.manageFeedsForm, table.manageFeedsForm :is(tbody, tr, th, td) {
   font-size: xx-small;
 }
 
-.toggleRead, .noteThis, .saveSnippet, .toggleDelete {
-  font-size: small;
-  font-style: italic;
+.toggleRead, .noteThis, .saveSnippet, .toggleDelete, .jotNotes {
+  font-size: x-small;
   border: 1px solid;
   border-radius: 6px;
   padding: 2px 4px;
 }
 
-.toggleRead:hover, .noteThis:hover, .saveSnippet:hover, .toggleDelete:hover {
+.toggleRead:hover, .noteThis:hover, .saveSnippet:hover, .toggleDelete:hover, .jotNotes:hover {
   color: #f15500;
 }
 
 .shortNote {
   width: 100%;
+  resize: both;
 }
 
 .itemContent, .itemTitle {
